@@ -10,7 +10,7 @@ DivertTraffic: Yes
 
 [Diverter]
 
-DumpPackets:            No
+DumpPackets:            Yes
 DumpPacketsFilePrefix:  packets
 
 ModifyLocalDNS:         No
@@ -34,9 +34,7 @@ Port:        1337
 Protocol:    TCP
 Listener:    RawListener
 UseSSL:      No
-Timeout:     300
-ProcessWhiteList: ncat.exe
-ExecuteCmd:  C:\Program Files (x86)\Windows Kits\10\Debuggers\x86\windbg.exe -p {pid}
+Timeout:     10
 
 [RawUDPListener]
 Enabled:     True
@@ -46,22 +44,16 @@ Listener:    RawListener
 UseSSL:      No
 Timeout:     10
 
-[DNS Server]
-Enabled:     Yes
-Port:        53
-Protocol:    UDP
-Listener:    DNSListener
-DNSResponse: 192.0.2.123
-NXDomains:   0
-
-[HTTPListener80]
+[FTPListener21]
 Enabled:     True
-Port:        80
+Port:        21
 Protocol:    TCP
-Listener:    HTTPListener
+Listener:    FTPListener
 UseSSL:      No
-Webroot:     defaultFiles/
-Timeout:     10
-#ProcessBlackList: dmclient.exe, OneDrive.exe, svchost.exe, backgroundTaskHost.exe, GoogleUpdate.exe, chrome.exe
-DumpHTTPPosts: Yes
-DumpHTTPPostsFilePrefix: http
+Ftproot:     defaultFiles/
+PasvPorts:   60000-60010
+
+[FTPListenerPASV]
+Enabled:     True
+Port:        60000-60010
+Protocol:    TCP
