@@ -186,3 +186,17 @@ Port:        25
 Protocol:    TCP
 Listener:    SMTPListener
 UseSSL:      No
+
+[FTPListener21]
+Enabled:     True
+Port:        21
+Protocol:    TCP
+Listener:    FTPListener
+UseSSL:      No
+Ftproot:     defaultFiles/
+PasvPorts:   60000-60010
+
+[FTPListenerPASV]
+Enabled:     True
+Port:        60000-60010
+Protocol:    TCP
