@@ -1,0 +1,17 @@
+     ______      _  ________ _   _ ______ _______     _   _  _____ 
+    |  ____/\   | |/ /  ____| \ | |  ____|__   __|   | \ | |/ ____|
+    | |__ /  \  | ' /| |__  |  \| | |__     | |______|  \| | |  __ 
+    |  __/ /\ \ |  < |  __| | . ` |  __|    | |______| . ` | | |_ |
+    | | / ____ \| . \| |____| |\  | |____   | |      | |\  | |__| |
+    |_|/_/    \_\_|\_\______|_| \_|______|  |_|      |_| \_|\_____|
+
+                       H T T P   L I S T E N E R                   
+FakeNet-NG is a next generation dynamic network analysis tool for malware analysts and penetration testers. It is open source and designed for the latest versions of Windows.
+
+The tool allows you to intercept and redirect all or specific network traffic while simulating legitimate network services. Using FakeNet-NG, malware analysts can quickly identify malware's functionality and capture network signatures. Penetration testers and bug hunters will find FakeNet-NG's configurable interception engine and modular framework highly useful when testing application's specific functionality and prototyping PoCs.
+
+FakeNet-NG is based on the excellent Fakenet tool developed by Andrew Honig and Michael Sikorski.
+
+Contact
+
+For bugs, crashes, or other comments please contact Peter Kacherginsky by email peter.kacherginsky@fireeye.com or Twitter @_iphelix.
