@@ -1,7 +1,11 @@
 Version 1.1
 -----------
 
+* FTP Listener (with SSL support, Passive and Active modes).
+* Specify port ranges for listeners (e.g. 80, 8080-8085, 8888).
+* VMWare Host-Only mode autoconfiguration.
 * Support for Pydivert 2.x branch.
+* Many bug and stability fixes.
 
 
 Version 1.0
